[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "noisereduce"
authors = [{name = "Tim Sainburg", email = "tsainburg@ucsd.edu"}]
description = "Noise reduction in python using spectral gating"
readme = "README.md"
license = {file = "LICENSE"}
version = "3.0.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "librosa>=0.10.0.post2",
    "matplotlib >=3.3.3",
    "numpy >=1.24.4",
    "scipy >=1.11.0",
    "torch >=1.7.1, <2.0.0",
    "tqdm >=4.65.0",
]

[project.urls]
Home = "https://github.com/timsainb/noisereduce"
